
    [PERMISSION]
    PERM = {'name':'PERM', 'roles':['a', 'b'], 'description':'PERM}

   and with this method, you don't need to define ROLES_PERMISSIONS section
#. Add TransactionMiddle as default settings in ORM settings.ini. By default, if 
   you add 'uliweb.contrib.orm', the transaction middleware will automatically 
   enabled. In the previous version, you should add this middleware yourself.
#. Add app arguments to exportstatic command
#. Remove --with-static option of export command, so default behavior is export
   static folder
#. Fix default file_serving process, add x_filename process, in order to make
   alt filename support processing correctly.
#. Add -m option to find command, so you can use::

    uliweb find -m model_name
    
   to find the model is defined in which model
#. Add manytomany parameter to Model.delete() function, so it'll automatically 
   delete manytomany relationships.
#. Add tables app to uliweb.
#. Add GenericReference and GenericRalation support
#. Add BigIntegerProperty support, the shorthand is Field(BIGINT)
#. Add __pk_type__ variable, current is 'int', others will be 'biginteger',
   you can use set_pk_type(name) to switch it, also add PKTYPE() function, you
   can use Field(PKTYPE()) to create ForeignKey Property according the option,
   in web project, you can swith it via ORM/PK_TYPE 
#. Add delete_fieldname parameter to Model.delete(), so if you pass True, it'll
   assume the delete_fieldname is 'deleted', and if you pass real field_name it'll
   use it directly. This way will not delete the record at all, just change the 
   delete_fieldname value from False to True.
#. Fix RemoteField default datatype as int and default value is None.
#. Refactor the ReferenceProperty datatype process.

0.1.1 Version
-----------------

#. Add BAE(Baidu Application Engine) and Heroku support

0.0.1 Version
-----------------

#. Support i18n language setting key in query_string, and you can also configure
   keyword in settings.ini.